폴더와 파일명을 읽는 기능
폴더 기반 홈페이지의 핵심 기능

--- a/Extensions/Extensions.csproj
+++ b/Extensions/Extensions.csproj
@@ -43,6 +43,7 @@
     <Compile Include="ArgumentHelper.cs" />
     <Compile Include="ConsoleHelper.cs" />
     <Compile Include="DictionaryHelper.cs" />
+    <Compile Include="DirectoryHelper.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringHelper.cs" />
