--- a/Extensions/Extensions.csproj
+++ b/Extensions/Extensions.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ConsoleHelper.cs" />
     <Compile Include="DictionaryHelper.cs" />
     <Compile Include="DirectoryHelper.cs" />
+    <Compile Include="IntHelper.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringHelper.cs" />
