--- a/Extensions/Extensions.csproj
+++ b/Extensions/Extensions.csproj
@@ -42,9 +42,10 @@
   <ItemGroup>
     <Compile Include="ArgumentHelper.cs" />
     <Compile Include="ConsoleHelper.cs" />
+    <Compile Include="ConvertHelper.cs" />
     <Compile Include="DictionaryHelper.cs" />
     <Compile Include="DirectoryHelper.cs" />
-    <Compile Include="IntHelper.cs" />
+    <Compile Include="NumberHelper.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringHelper.cs" />
