--- a/Extensions/Extensions.csproj
+++ b/Extensions/Extensions.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Markdown.cs" />
     <Compile Include="NumberHelper.cs" />
     <Compile Include="Logger.cs" />
+    <Compile Include="ObjectHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringHelper.cs" />
   </ItemGroup>
