TableName 생성 버그 수정

--- a/Extensions/Extensions.csproj
+++ b/Extensions/Extensions.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DateTimeHelper.cs" />
     <Compile Include="DictionaryHelper.cs" />
     <Compile Include="DirectoryHelper.cs" />
+    <Compile Include="EnumHelper.cs" />
     <Compile Include="IEnumerableHelper.cs" />
     <Compile Include="Markdown.cs" />
     <Compile Include="NumberHelper.cs" />
